Fix for wrong alignment in vaultlist

--- a/sass/credentials.scss
+++ b/sass/credentials.scss
@@ -53,9 +53,16 @@
   }
 }
 
+.vaultlist_sidebar_hidden{
+  background-color: red;
+  width: 100vw !important;
+  margin-left: 0px !important;
+}
 #app-content {
+
   margin-left: 300px;
   width: calc(100vw - 300px);
+
   overflow-x: hidden;
 
   //width: 100%;
