--- a/sass/vaults.scss
+++ b/sass/vaults.scss
@@ -37,7 +37,6 @@
 }
 .vault_wrapper{
   margin:0 auto auto auto;
-  transform: translate(-150px);
 
   max-width: 420px;
   @include border-radius(5px);
